--- a/HW1.ipynb
+++ b/HW1.ipynb
@@ -194,6 +194,18 @@
     "        return b\n",
     "comparison(3,4)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Just a random new md line"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
