finished the hw5

--- a/HW5.ipynb
+++ b/HW5.ipynb
@@ -286,7 +286,7 @@
    "id": "b1e63b84-650e-45c9-a42d-57fb178ab3af",
    "metadata": {},
    "source": [
-    "###2 Divisibility Check\n",
+    "### 2 Divisibility Check\n",
     "\n",
     "Create a program that asks the user for a number. If the number is divisible by both 3 and 5, print \"FizzBuzz\". If it is only divisible by 3, print \"Fizz\". If it is only divisible by 5, print \"Buzz\". Otherwise, print the number."
    ]
@@ -329,12 +329,96 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d4e72bfc-8667-42ac-b694-e8cd71d253ab",
+   "cell_type": "markdown",
+   "id": "d50a0c6f-3cbe-4603-ab60-48064ccebe9d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 3 Voting Eligibility\n",
+    "\n",
+    "Write a program that checks if a user is eligible to vote. A user is eligible if they are at least 18 years old and a citizen (yes or no). Print \"Eligible to vote\" or \"Not eligible to vote\" based on the inputs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "71471c2f-c9b4-495b-8f2b-cad76a282116",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "enter your age:  37\n",
+      "are you a citizen? (yes/no):  yes\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "eligible to vote\n"
+     ]
+    }
+   ],
+   "source": [
+    "age = int(input('enter your age: '))\n",
+    "is_citizen = input('are you a citizen? (yes/no): ')\n",
+    "\n",
+    "if age >=18 and is_citizen == 'yes':\n",
+    "    print('eligible to vote')\n",
+    "else:\n",
+    "    print('not eligible to vote')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "abae341d-161c-454e-9a2a-a3df1a36df87",
+   "metadata": {},
+   "source": [
+    "### 4 BMI Calculator\n",
+    "\n",
+    "Create a program that calculates the Body Mass Index (BMI) given the user's weight in kilograms and height in meters. Print the category of BMI based on the following:\n",
+    "- \"Underweight\" for BMI less than 18.5\n",
+    "- \"Normal weight\" for BMI 18.5-24.9\n",
+    "- \"Overweight\" for BMI 25-29.9\n",
+    "- \"Obesity\" for BMI 30 and above"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "a8b5d228-8010-410a-a933-398dd2b486f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "enter your weight in kg:  110\n",
+      "enter your height in meters:  2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "overweight\n"
+     ]
+    }
+   ],
+   "source": [
+    "weight = float(input('enter your weight in kg: '))\n",
+    "height = float(input('enter your height in meters: '))\n",
+    "bmi = weight/height**2\n",
+    "if bmi < 18.5:\n",
+    "    print('underweight')\n",
+    "elif bmi < 25:\n",
+    "    print('normal weight')\n",
+    "elif bmi < 30:\n",
+    "    print('overweight')\n",
+    "else:\n",
+    "    print('obese')"
+   ]
   }
  ],
  "metadata": {
