--- a/HW6.ipynb
+++ b/HW6.ipynb
@@ -39,6 +39,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "dd911c22",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# using while loop\n",
+    "num = 0\n",
+    "while num <10:\n",
+    "    num +=1\n",
+    "    print(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "id": "49b0af1a-db91-46ff-a349-d5419aa5c8ef",
    "metadata": {},
@@ -144,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "id": "63d40739-a807-4aac-8989-ef1d84aa95aa",
    "metadata": {},
    "outputs": [
@@ -162,6 +193,28 @@
     "rev_str =\"\"\n",
     "for char in my_string:\n",
     "    rev_str = char + rev_str\n",
+    "print(rev_str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "bd34e167",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "olleh\n"
+     ]
+    }
+   ],
+   "source": [
+    "# using reversed() function\n",
+    "rev_str = \"\"\n",
+    "for char in reversed(my_string):\n",
+    "    rev_str += char\n",
     "print(rev_str)"
    ]
   },
@@ -198,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "id": "af5285ba-46fc-4d1f-b8b4-118ca94350dd",
    "metadata": {},
    "outputs": [
@@ -290,6 +343,30 @@
     "for i in range(1,n+1):\n",
     "    factorial *= i\n",
     "print(factorial)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "179f37f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "'break' outside loop (1745377264.py, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[10], line 5\u001b[0;36m\u001b[0m\n\u001b[0;31m    break\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m 'break' outside loop\n"
+     ]
+    }
+   ],
+   "source": [
+    "def rec_factorial(n):\n",
+    "    factorial = n*rec_factorial(n-1)\n",
+    "    n -=1\n",
+    "    if n < 1:\n",
+    "        break\n",
+    "rec_factorial(5)"
    ]
   },
   {
